# claude-prompt-guide

./: .gitignore  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
prompt_guide/: __init__.py  __main__.py  claude_cli.py  cli.py  prompts.py
standalone/: prompt-guide.py
